--- a/AbilityTest/Storyboards/Base.lproj/Main.storyboard
+++ b/AbilityTest/Storyboards/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                         <rect key="frame" x="0.0" y="47" width="59" height="47"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                         <state key="normal" title="查看"/>
+                                        <connections>
+                                            <segue destination="3eT-kN-1m1" kind="showDetail" identifier="recordsView" id="8oF-J6-71N"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -47,7 +50,101 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30.46875" y="32.8125"/>
+            <point key="canvasLocation" x="107" y="108"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="egK-kL-1H2">
+            <objects>
+                <viewController id="PPY-9k-1pv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3cq-OC-eBe">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFK-Mb-CvW">
+                                <rect key="frame" x="389" y="481" width="39" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kPM-Lj-LwR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HxG-gc-RkJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1736" y="-66"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="s2W-ZD-iTB">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="7a1-4q-LOY" customClass="RecordsListViewController" customModule="AbilityTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ttC-hJ-atI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecordListCell" id="FXc-tS-f3V" customClass="RecordListCell" customModule="AbilityTest" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FXc-tS-f3V" id="j2W-7k-vCZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYm-ed-ENq">
+                                            <rect key="frame" x="16" y="0.0" width="45" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="rYm-ed-ENq" id="tvp-lW-G07"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7a1-4q-LOY" id="xUv-6p-nVD"/>
+                            <outlet property="delegate" destination="7a1-4q-LOY" id="PJ6-op-1e3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="7xa-hE-ur0"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UEy-I7-I9W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2506" y="-708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="r4a-Dw-KdZ">
+            <objects>
+                <navigationController id="o2U-0P-ZKF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kQc-m2-Q4Z">
+                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="7a1-4q-LOY" kind="relationship" relationship="rootViewController" id="5mu-eI-Tde"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="neg-Vl-3of" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1736" y="-709"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="xPa-rH-tql">
+            <objects>
+                <splitViewController id="3eT-kN-1m1" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="o2U-0P-ZKF" kind="relationship" relationship="masterViewController" id="tmn-zf-hdd"/>
+                        <segue destination="PPY-9k-1pv" kind="relationship" relationship="detailViewController" id="DBn-dK-uBj"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xcn-Jc-k3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="965" y="-387"/>
         </scene>
     </scenes>
 </document>
