--- a/AbilityTest/Storyboards/Base.lproj/Main.storyboard
+++ b/AbilityTest/Storyboards/Base.lproj/Main.storyboard
@@ -52,18 +52,18 @@
             </objects>
             <point key="canvasLocation" x="107" y="108"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="egK-kL-1H2">
             <objects>
-                <viewController id="PPY-9k-1pv" sceneMemberID="viewController">
+                <viewController id="PPY-9k-1pv" customClass="DetailViewController" customModule="AbilityTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3cq-OC-eBe">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFK-Mb-CvW">
-                                <rect key="frame" x="389" y="481" width="39" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="NAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFK-Mb-CvW">
+                                <rect key="frame" x="351" y="229" width="276" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -71,10 +71,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="kPM-Lj-LwR"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Kqf-RN-zFo"/>
+                    <connections>
+                        <outlet property="nameLabel" destination="VFK-Mb-CvW" id="M05-aQ-asj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HxG-gc-RkJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1736" y="-66"/>
+            <point key="canvasLocation" x="2501.5625" y="-66.2109375"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="s2W-ZD-iTB">
@@ -93,7 +97,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYm-ed-ENq">
-                                            <rect key="frame" x="16" y="0.0" width="45" height="21"/>
+                                            <rect key="frame" x="16" y="0.0" width="145" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -115,7 +119,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UEy-I7-I9W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2506" y="-708"/>
+            <point key="canvasLocation" x="2505.46875" y="-708.3984375"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r4a-Dw-KdZ">
@@ -139,12 +143,30 @@
                 <splitViewController id="3eT-kN-1m1" sceneMemberID="viewController">
                     <connections>
                         <segue destination="o2U-0P-ZKF" kind="relationship" relationship="masterViewController" id="tmn-zf-hdd"/>
-                        <segue destination="PPY-9k-1pv" kind="relationship" relationship="detailViewController" id="DBn-dK-uBj"/>
+                        <segue destination="4WY-Nm-6CQ" kind="relationship" relationship="detailViewController" id="DBn-dK-uBj"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xcn-Jc-k3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="965" y="-387"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jz7-rX-S8r">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4WY-Nm-6CQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cAb-eb-eJx">
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PPY-9k-1pv" kind="relationship" relationship="rootViewController" id="n2R-po-J3h"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bQo-uA-yzu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1735.9375" y="-66.2109375"/>
         </scene>
     </scenes>
 </document>
