Generate PDF from Template HTML

--- a/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
+++ b/AbilityTest/Storyboards/AbilityTest/Storyboards/Base.lproj/Records.storyboard
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3eT-kN-1m1">
+    <device id="ipad9_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,7 +14,7 @@
             <objects>
                 <viewController id="PPY-9k-1pv" customClass="DetailViewController" customModule="AbilityTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3cq-OC-eBe">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="NAME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFK-Mb-CvW">
@@ -21,6 +24,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gV1-Z2-y1Z">
+                                <rect key="frame" x="364" y="350" width="41" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="导出"/>
+                                <connections>
+                                    <segue destination="hZH-hd-XrY" kind="presentation" identifier="pdfPreviewView" id="Ehq-Vy-Fuy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="kPM-Lj-LwR"/>
@@ -34,12 +46,59 @@
             </objects>
             <point key="canvasLocation" x="2501.5625" y="-66.2109375"/>
         </scene>
+        <!--Preview View Controller-->
+        <scene sceneID="UkM-x7-udP">
+            <objects>
+                <viewController id="oQt-eE-2p3" customClass="PDFPreviewViewController" customModule="AbilityTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5yj-Ha-RaI">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YLr-6D-IOK">
+                                <rect key="frame" x="0.0" y="70" width="768" height="954"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="n12-FL-IiP">
+                                <rect key="frame" x="374" y="537" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2cK-cr-r1T" firstAttribute="bottom" secondItem="YLr-6D-IOK" secondAttribute="bottom" id="KKX-ei-iOe"/>
+                            <constraint firstItem="YLr-6D-IOK" firstAttribute="top" secondItem="2cK-cr-r1T" secondAttribute="top" id="cji-zA-hfZ"/>
+                            <constraint firstItem="YLr-6D-IOK" firstAttribute="leading" secondItem="2cK-cr-r1T" secondAttribute="leading" id="o7c-gh-fh5"/>
+                            <constraint firstItem="2cK-cr-r1T" firstAttribute="trailing" secondItem="YLr-6D-IOK" secondAttribute="trailing" id="yIw-cO-gtK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2cK-cr-r1T"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Pu8-Rb-Sqg">
+                        <barButtonItem key="leftBarButtonItem" title="完成" id="Yrp-kx-Czf">
+                            <connections>
+                                <segue destination="yhV-ma-3Sn" kind="unwind" unwindAction="unwindPDFPreviewWith:" id="lbb-IL-VjQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="activityIndicatorView" destination="n12-FL-IiP" id="vbO-4K-UGV"/>
+                        <outlet property="webView" destination="YLr-6D-IOK" id="xko-i7-dmM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oqR-ja-EV9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="yhV-ma-3Sn" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="4137.5" y="-58.007812499999993"/>
+        </scene>
         <!--Root View Controller-->
         <scene sceneID="s2W-ZD-iTB">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="7a1-4q-LOY" customClass="RecordsListViewController" customModule="AbilityTest" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ttC-hJ-atI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
@@ -121,6 +180,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bQo-uA-yzu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1735.9375" y="-66.2109375"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="g2q-6T-x5B">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hZH-hd-XrY" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SnT-5S-xtX">
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oQt-eE-2p3" kind="relationship" relationship="rootViewController" id="ipt-01-adK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fGF-dx-ny3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3371.875" y="-58.007812499999993"/>
         </scene>
     </scenes>
 </document>
